// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#sprockets/sprockets/fieldset <Sprocket /> With additional props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <FieldsetGroup>
    <fieldset
      className="MOCK CLASSNAME"
    >
      <FieldsetTitle>
        <legend
          className="MOCK CLASSNAME"
        >
          <TextContent>
            <span
              className="text-content"
            >
              MOCK TITLE
            </span>
          </TextContent>
        </legend>
      </FieldsetTitle>
      <FieldsetDescription />
      <FieldsetErrorMessage />
      MOCK CHILDREN
    </fieldset>
  </FieldsetGroup>
</div>
`;

exports[`#sprockets/sprockets/fieldset <Sprocket /> With required props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <FieldsetGroup>
    <fieldset
      className="MOCK CLASSNAME"
    >
      <FieldsetTitle />
      <FieldsetDescription />
      <FieldsetErrorMessage />
    </fieldset>
  </FieldsetGroup>
</div>
`;
